--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" ng-app="app" ng-controller="AppController as app">
   <head>
     <meta charset="utf-8">
     <title>Javascript RegEx</title>
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    {{app.foo}}
     <div class="regex">
       <code>
         <span>/</span>
@@ -44,6 +45,11 @@
       </select>
     </div>
     <div id="results-view"></div>
-    <script src="index.js"></script>
+    <script src="bower/angular/angular.js"></script>
+    <script src="bower/angular-animate/angular-animate.js"></script>
+    <script src="bower/angular-aria/angular-aria.js"></script>
+    <script src="bower/angular-material/angular-material.js"></script>
+    <script src="bower/lodash/lodash.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
