fixed classes and connected all dependencies. the app is ready to be styled.

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Javascript RegEx</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="style/index.css" />
   </head>
-  <body>
+  <body ng-cloak>
     {{app.foo}}
     <div class="regex">
       <code>
