--- a/src/index.html
+++ b/src/index.html
@@ -10,80 +10,92 @@
 </head>
 
 <body ng-cloak>
-  <md-content>
     <md-toolbar>
       <div class="md-toolbar-tools">
-        <md-button class="md-icon-button" aria-label="Settings">
-          <i class="zmdi zmdi-apple"></i>
-        </md-button>
         <h2>
-          <span>Toolbar with Icon Buttons</span>
+          <span>JSRegEx</span>
         </h2>
         <span flex></span>
         <md-button class="md-icon-button" aria-label="Favorite">
-          <md-icon md-svg-icon="img/icons/favorite.svg" style="color: greenyellow;"></md-icon>
-        </md-button>
-        <md-button class="md-icon-button" aria-label="More">
-          <md-icon md-svg-icon="img/icons/more_vert.svg"></md-icon>
+          <i class="zmdi zmdi-help"></i>
         </md-button>
       </div>
     </md-toolbar>
-    <br>
-    <md-toolbar class="md-tall md-accent">
-      <h2 class="md-toolbar-tools">
-        <span>Toolbar: tall (md-accent)</span>
-      </h2>
-    </md-toolbar>
-    <br>
-    <md-toolbar class="md-tall md-warn md-hue-3">
-      <span flex></span>
-      <h2 class="md-toolbar-tools md-toolbar-tools-bottom">
-        <span class="md-flex">Toolbar: tall with actions pin to the bottom (md-warn md-hue-3)</span>
-      </h2>
-    </md-toolbar>
+
+    <div layout layout-sm="column">
+      <md-input-container flex="90">
+        <label>Regex pattern</label>
+        <input ng-model="user.firstName">
+      </md-input-container>
+      <md-input-container flex="10">
+        <label>Flags</label>
+        <input ng-model="theMax">
+      </md-input-container>
+    </div>
+
+
+        <md-menu>
+          <md-button aria-label="Open list of regular expression flags"
+                     class="md-icon-button"
+                     ng-click="app.openMenu($mdOpenMenu, $event)">
+            <md-icon md-svg-icon="flag"></md-icon>
+          </md-button>
+          <md-menu-content width="2">
+            <md-menu-item>
+              <div>
+                <md-checkbox ng-model="app.flags.g" aria-label="General" class="md-primary">
+                  General
+                </md-checkbox>
+              </div>
+            </md-menu-item>
+            <md-menu-item>
+              <div>
+                <md-checkbox ng-model="app.flags.m" aria-label="Multiline" class="md-primary">
+                  Multiline
+                </md-checkbox>
+              </div>
+            </md-menu-item>
+            <md-menu-item>
+              <div>
+                <md-checkbox ng-model="app.flags.i" aria-label="Case insensitive" class="md-primary">
+                  Case insensitive
+                </md-checkbox>
+              </div>
+            </md-menu-item>
+          </md-menu-content>
+        </md-menu>
+
+        <md-input-container>
+          <label>Function</label>
+          <md-select ng-model="app.selectedFunction">
+            <md-option ng-repeat="f in app.functions" value="{{f.name}}">{{f.name}}</md-option>
+          </md-select>
+        </md-input-container>
+        <summary>{{app.selectedFunction.description}}</summary>
+
+        <md-input-container>
+          <label>Test string</label>
+          <textarea ng-model="app.testString"></textarea>
+        </md-input-container>
+
+        <md-input-container>
+          <label>Parameter</label>
+          <textarea ng-model="app.parameter"></textarea>
+        </md-input-container>
+
+        <md-button ng-click="app.clear()">Clear</md-button>
+  <md-content>
   </md-content>
-
-
-  {{app.foo}}
-  <md-button> Button </md-button>
-
-
-
-
-
-
-
-
-
-
-  <div class="regex">
-    <code>
-      <span>/</span>
-      <input id="regex-pattern" type="text" placeholder="regexp" />
-      <span>/</span>
-      <input id="regex-flags" type="text" placeholder="gimyu" pattern="[GgIiMmYyUu]" />
-    </code>
-    <div class="regex-error">No error</div>
-  </div>
-  <textarea id="test-string" rows="5" placeholder="test string"></textarea>
-  <textarea id="param-string" rows="5" placeholder="test string"></textarea>
-  <div>
-    <select id="function-selector">
-      <option data-name="exec">exec()</option>
-      <option data-name="test">test()</option>
-      <option data-name="match" data-target="s">match()</option>
-      <option data-name="search" data-target="s">search()</option>
-      <option data-name="replace" data-target="s" data-param="replace with">replace()</option>
-      <option data-name="split" data-target="s" data-param="separator">split()</option>
-    </select>
-  </div>
-  <div id="results-view"></div>
 
   <script src="bower/angular/angular.js"></script>
   <script src="bower/angular-animate/angular-animate.js"></script>
   <script src="bower/angular-aria/angular-aria.js"></script>
   <script src="bower/angular-material/angular-material.js"></script>
   <script src="bower/lodash/lodash.js"></script>
+
+  <script src="js/config.js"></script>
+  <script src="js/copy.js"></script>
+  <script src="js/engine.js"></script>
   <script src="js/app.js"></script>
 </body>
 
